--- a/index.html
+++ b/index.html
@@ -692,5 +692,14 @@ Curriculum materials, events, seminars, workshops, mentor meetings, assignments 
         <script src="https://yrjournal.org/../js/plugins.js"></script>
           <script src="https://yrjournal.org/js/script_CP.js"></script>
     <script src="https://yrjournal.org/js/script.js"></script>
+        <script src="coffeti.js"></script>
+        <script type="text/javascript"> 
+        //Sounds for funs
+
+var achievements = new Audio('https://eptonline.org/assets/achievements.mp3');
+             achievements.play();
+            confetti.start();
+        </script>
+        
     </body>
 </html>
