--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>BDEOxYRJ Summer Research Program 2024 | Youth Research Journal</title>
+    <title>BDEO-link YRJ Summer Research Program 2024 | Youth Research Journal</title>
     <link rel="icon" href="https://yrjournal.org/images/Logo.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://yrjournal.org/css/contact.css">
